--- a/agree/AndroidManifest.xml
+++ b/agree/AndroidManifest.xml
@@ -181,10 +181,11 @@
         <activity
             android:name="com.biju.login.BeforeLoginActivity"
             android:label="@string/title_activity_before_login"
-            android:launchMode="singleTask" >
+            android:launchMode="singleTask" 
+            android:theme="@android:style/Theme.Light.NoTitleBar"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
